# UNI_finished_forked

./: .gitignore  README.md  hello
Databaser/labb1/: ER_Labb1.drawio  labb1_fixad.drawio
Databaser/labb2/: basrelationer.txt  config.sql  constraints.sql  create.sql  insert.sql  queries.sql
Databaser/labb3/: 1NF.drawio  2NF.drawio  3NF.drawio  Dessert_Diagram.drawio  create_all_in_one_mysql_v2.sql  labb3.txt  labb3_form.pages
Grundläggande datavetenskap/: ~$talabb1.docx
Grundläggande datavetenskap/LABB2/: Laboration Maskinkod.docx  labb2.2C.sim  labb2.2a.sim  labb2.2b.sim  labb2.3A.sim  labb2.3B.sim  labb2.3C.sim  labb2A.1.sim  labb2B.1.sim  labb2C.1.sim
Grundläggande datavetenskap/Labb3/: Laboration data3  Takh2100_1.2_v1.py  Takh2100_1.3_v1.py  Takh2100_3.1_v1.py  Takh2100_3.3_v1.py
Programeringsmetodik/labb2_c/: CMakeLists.txt  circle.cpp  circle.h  cylinder.cpp  cylinder.h  geometry.h  main.cpp  parallelepiped.cpp  parallelepiped.h  rectangle.cpp  rectangle.h  roundedRect.cpp  roundedRect.h  shape.cpp  shape.h
Programeringsmetodik/labb5_c/: CMakeLists.txt  GreaterThan.cpp  GreaterThan.h  MyBinOp.cpp  MyBinOp.h  MyFunc.cpp  MyFunc.h  MyPrint.cpp  MyPrint.h  MyUnOp.cpp  MyUnOp.h  laptop.cpp  laptop.h  main.cpp
datastrukturer_algoritmer/labb2_c/: CMakeLists.txt  dataGenerator.cpp  dataGenerator.h  insertionSort.cpp  insertionSort.h  main.cpp  plot.py  quickSort.cpp  quickSort.h  saveData.cpp  saveData.h  selectionSort.cpp  selectionSort.h  sorting.h
datastrukturer_algoritmer/labb3/: BST_Search.cpp  BST_Search.h  CMakeLists.txt  Hash_Search.cpp  Hash_Search.h  main.cpp  plot.py  saveData.cpp  saveData.h  searchBinary.cpp  searchBinary.h  searchLinear.cpp  searchLinear.h  searching.h
intro till programmering/labb3/: kör  (+7 more)
(+230 files in other folders)
